tests/paczka1/fuzzy1/70021271.err
Error in line 1: f1n0AR S491 54,1
Error in line 6: ZdthVfZa A953 36,7
Error in line 8: ZdthVfZa A953 74,75
Error in line 12: rvi A953 -4,5
Error in line 11: f1n0AR A953 98,8
Error in line 9: A477 A477 83,2
Error in line 17: A477 S974 84,6
Error in line 7: ZdthVfZa A477 30,7
Error in line 13: n80Ssb89Tf A953 18,0
Error in line 24: f1n0AR A953 34,5
Error in line 34: A477 S974 88,45
Error in line 26: ZdthVfZa A953 52,2
Error in line 3: rvi A953 69,7
